@@ -5,7 +5,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -434,6 +434,26 @@ If true, requires the use of the <code>STLS</code> command.
 If the server doesn't support the STLS command, or the command
 fails, the connect method will fail.
 Defaults to false.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.pop3.socks.host</TD>
+<TD>string</TD>
+<TD>
+Specifies the host name of a SOCKS5 proxy server that will be used for
+connections to the mail server.
+(Note that this only works on JDK 1.5 or newer.)
+</TD>
+</TR>
+
+<TR>
+<TD>mail.pop3.socks.port</TD>
+<TD>string</TD>
+<TD>
+Specifies the port number for the SOCKS5 proxy server.
+This should only need to be used if the proxy server is not using
+the standard port number of 1080.
 </TD>
 </TR>
 
